# OpenGl-Engine

./: .clang_complete  .gitattributes  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Debug  GAME.sln  GAME.sublime-project  GAME.sublime-workspace  GAME.vcxproj  GAME.vcxproj.filters  ImGUI.ini  Makefile  README.md  Release  Release2  \  application.h  clang-tidy-cmds.sh  clear.sh  compile_commands.json  imgui.ini  make.sh  makeall.sh  makecomponent.sh  makefolders.sh  makeglad.sh  makepch.sh  objdump.sh  project.drawio  t.txt  testtest123.cpp
buld/: CMakeCache.txt  Makefile  cmake_install.cmake
delete-soon/: Release  makeall.sh  makefolders.sh
include/: aaa.h  application.h  camera.h  component.h  entity.h  game.h  imGuiManager.h  input.h  lightManager.h  lights.h  log.h  main_includes.h  mesh_new.h  model.h  mypch.h  particles.h  profiler.h  random.h  renderer.h  shader.h  test.h  texture.h  transform.h  ui.h
include/ImGUI/: imgui.h  imgui_impl_opengl3.h
include/assets/: camera.h  cameraFPSController.h  colliderBase.h  colliders.h  deleteAfterTouched.h  material.h  mesh.h  model.h  modelRenderer.h  physicsFPScontroller.h  rigidbody.h  testComponent.h  transform.h
include/assimp/: Importer.h  Importer.hpp  material.h  mesh.h
include/core/: application.h  batchRenderer.h  engineInfo.h  framebuffer.h  imGuiManager.h  input.h  layer.h  math.h  modelImporter.h  physics.h  physxSimulationFilter.h  renderer.h  shader.h  tag.h  texture.h
include/ecs/: component.h  entity.h  scene.h
include/glad/: glad.h
include/glm/: integer.hpp
include/imguizmo/: ImCurveEdit.h
include/nfd/: nfd.hpp
include/physx/: PxActor.h  PxArticulationLink.h  PxArticulationReducedCoordinate.h  PxBatchQueryDesc.h  PxBroadPhase.h  PxClient.h  PxConstraintDesc.h  PxContact.h  PxContactModifyCallback.h  PxFiltering.h  PxForceMode.h  PxFoundation.h  PxImmediateMode.h  PxLockedData.h  PxMaterial.h  PxPhysics.h  PxPhysicsAPI.h  PxPhysicsSerialization.h  PxQueryReport.h  PxRigidActor.h  PxRigidDynamic.h  PxScene.h  PxSceneDesc.h  PxSceneLock.h  PxShape.h  PxSimulationEventCallback.h  PxSimulationStatistics.h
include/utils/: fileUtils.h
include/yaml-cpp/: emitterutils.h
lib/: assimp-vc140-mt.lib
lib/linux/: libassimp.so.5
lib/nfd/: nfd.lib
lib/physx_checked/: LowLevelAABB_static_64.lib  LowLevel_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.exp  PhysXCommon_64.map  PhysXCooking_64.exp  PhysXCooking_64.map  PhysXFoundation_64.exp  PhysXPvdSDK_static_64.lib  PhysXTask_static_64.lib  PhysX_64.exp  PhysX_64.lib  SampleBase_static_64.lib  SampleFramework_static_64.lib  SamplePlatform_static_64.lib  SamplesToolkit_static_64.lib  SceneQuery_static_64.lib  SnippetRender_static_64.lib  SnippetUtils_static_64.lib
lib/physx_debug/: LowLevelAABB_static_64.lib  LowLevel_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.exp  PhysXCommon_64.lib  PhysXCommon_64.map  PhysXCooking_64.exp  PhysXCooking_64.lib  PhysXCooking_64.map  PhysXFoundation_64.exp  PhysXTask_static_64.lib  PhysX_64.exp  SampleFramework_static_64.lib  SamplePlatform_static_64.lib  SamplesToolkit_static_64.lib  SnippetRender_static_64.lib  SnippetUtils_static_64.lib
lib/physx_profile/: LowLevelAABB_static_64.lib  LowLevel_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.exp  PhysXCommon_64.map  PhysXCooking_64.exp  PhysXCooking_64.lib  PhysXCooking_64.map  PhysXFoundation_64.exp  PhysXPvdSDK_static_64.lib  PhysXTask_static_64.lib  PhysX_64.exp  PhysX_64.lib  SampleBase_static_64.lib  SampleFramework_static_64.lib  SamplePlatform_static_64.lib  SamplesToolkit_static_64.lib  SceneQuery_static_64.lib  SnippetRender_static_64.lib  SnippetUtils_static_64.lib
lib/physx_release/: LowLevelAABB_static_64.lib  LowLevel_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXCommon_64.exp  PhysXCommon_64.lib  PhysXCommon_64.map  PhysXCooking_64.exp  PhysXCooking_64.lib  PhysXCooking_64.map  PhysXCooking_static_64.lib  PhysXFoundation_64.exp  PhysXFoundation_static_64.lib  PhysXPvdSDK_static_64.lib  PhysXTask_static_64.lib  PhysX_64.exp  PhysX_64.lib  PhysX_64.map  SampleBase_static_64.lib  SampleFramework_static_64.lib  SamplePlatform_static_64.lib  SamplesToolkit_static_64.lib  SceneQuery_static_64.lib  SnippetRender_static_64.lib  SnippetUtils_static_64.lib
other/: TEMP.scene  TEMP.txt  erroroutput.txt  output.txt  profile.json  save.txt  savetest.txt  savetest2.txt
other/components/: base.cpp  base.h
other/materials/: test2.material
other/scenes/: PhysicsTest.scene  TEMP.scene  chubby.scene  font.scene  house.scene  person.scene  shapes - Copy.scene  shapes.scene  shapes2.scene  shapes3.scene
res/: box.fbx  luka.fbx  monky.fbx  playground.fbx
res/BOXES/: BOX.mtl
res/backpack/: backpack.fbxZone.Identifier
res/fbx/: box.fbx  box.fbx.bs  box.fbx.wot  chair.fbx  cone.fbx  cone.fbx.wot  cylinder.fbx  cylinder.fbx.wot  plane.fbx  plane.fbx.wot  platform.fbx  sphere.fbx  sphere.fbx.bs  sphere.fbx.wot  sphere.fbx.wot.bak  torus.fbx  torus.fbx.wot  torus_cone.fbx  untitled.fbx
res/fonts/: IHATEYOU.fnt  SDF.fnt  arial.fnt  arial.fntZone.Identifier  arial.pngZone.Identifier  why.fnt  why2.fnt
res/physx/: platform.fbx  platform.fbx.bs  platform.fbx.wot
res/robot/: nanosuit.fbx  nanosuit1.fbx
res/shaders/: color.fs  color.vs  glyph.fs  glyph.vs  light.vs  model.fs  null.fs  null.vs  pointLight.fs  pointLight.vs  test.fs  test.vs
src/: application.cpp  camera.cpp  component.cpp  entity.cpp  game.cpp  imGuiManager.cpp  input.cpp  lightManager.cpp  lights.cpp  log.cpp  main.cpp  mesh.cpp  model.cpp  mypch.cpp  particles.cpp  profiler.cpp  random.cpp  renderer.cpp  shader.cpp  texture.cpp  transform.cpp  ui.cpp
src/GLAD/: glad.c
src/ImGUI/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_stdlib.cpp  imgui_tables.cpp  imgui_widgets.cpp
src/assets/: camera.cpp  cameraFPSController.cpp  colliderBase.cpp  colliders.cpp  deleteAfterTouched.cpp  material.cpp  (+7 more)
temp/: Microsoft (R) Build Engine version 16.8.3+39993bd9.txt
(+291 files in other folders)
